--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Meu portfólio</title>
 </head>
 <body>
-    
+    <img src="Minha imagem" alt="avatar do Leonardo" srcset="">
+    <p>Eu sou Leonardo_</p>
+    <h1>Eu sou Programador</h1>
+    <p>Estudo no Colégio Estadual João de Oliveira Franco, e estou cursando o curso de Programação do Alura</p>
+    <p>Minhas habilidades</p>
+    <div>
+            <p>HTML</p>
+            <p>CSS</p>
+            <p>JavaScript</p>
+    </div>
 </body>
 </html>
